--- a/www/templates/apps/docApprove/p2_moduleList.html
+++ b/www/templates/apps/docApprove/p2_moduleList.html
@@ -16,7 +16,7 @@
     <ion-refresher pulling-text="משוך לרענון..."  on-refresh="doRefresh()">
     </ion-refresher>
     <div class="pele-page-title pele-img-size pele-page-title-font">
-      <a class="description">רשימת טפסים לאישור</a>
+      <a class="description">בחירת טפסים לאישור</a>
     </div>
 
     <div class="row row-bottom">
