--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -54,7 +54,7 @@
         </ion-item>
         <ion-item class="item-icon-left" nav-clear menu-close ui-sref="app.p1_appsLists">
           <i class="icon ion-document"></i>
-          <h2 class="menu-text">רשימת אפליקציות</h2>
+          <h2 class="menu-text">בחירת אפליקציה</h2>
         </ion-item>
       </ion-list>
 
