--- a/www/templates/p1_appsLists.html
+++ b/www/templates/p1_appsLists.html
@@ -11,7 +11,7 @@
     </ion-refresher>
 
     <div class="pele-page-title pele-img-size pele-page-title-font">
-      <a class="description">רשימת אפליקציות</a>
+      <a class="description">בחירת אפליקציה</a>
     </div>
     <!-- -->
     <!-- Source Version
