--- a/www/css/pele_style.css
+++ b/www/css/pele_style.css
@@ -278,6 +278,26 @@ a.icon-expand{background-image: url("../img/DocApprove/expand_arrow.png");
     display: inline-block;
 }
 
+i.icon-collapse{background-image: url("../img/DocApprove/collapse_arrow.png");
+  background-size: 100% 24px !important;
+  background-repeat:no-repeat;
+  height:24px ;
+  width: 24px;
+  padding: 0px;
+  float: left;
+  display: inline-block;
+}
+
+i.icon-expand{background-image: url("../img/DocApprove/expand_arrow.png");
+  background-size: 100% 24px !important;
+  background-repeat:no-repeat;
+  height:24px ;
+  width: 24px;
+  padding: 0px;
+  float: left;
+  display: inline-block;
+}
+
 
 span.item-title{
     /* direction: rtl;*/
