pin code decription

--- a/www/css/pele_style.css
+++ b/www/css/pele_style.css
@@ -326,3 +326,7 @@ div.item-content{padding:5px 30px 5px 30px !important; border: none !important; 
   padding:0px;
   margin: 0px 0px 0px 0px ;
 }
+
+input[type=tel] {
+  -webkit-text-security: disc;
+}
