--- a/www/templates/apps/docApprove/p4_doc_807.html
+++ b/www/templates/apps/docApprove/p4_doc_807.html
@@ -5,7 +5,7 @@
   <ion-nav-title>
     <div class="bar bar-header bar-light">
       <div class="title" id="logo">
-        <img src="img/DocApprove/logo.png" style="max-width: 100%;  height: 100%;"/>
+        <!--<img src="img/DocApprove/logo.png" style="max-width: 100%;  height: 100%;"/>-->
       </div>
     </div>
   </ion-nav-title>
@@ -108,7 +108,7 @@
       </div>
 
       <div class="col">
-        <button class="button button-block button-large button-assertive icon-right ion-close-circled" ng-click="docReject()">דחיה</button>
+        <button class="button button-block button-large button-balanced icon-right ion-close-circled" ng-click="docReject()">דחיה</button>
       </div>
     </div>
     <div class="row" ngmodel="buttons.approve" ng-show="!approve">
