--- a/www/css/tabSlideBox.css
+++ b/www/css/tabSlideBox.css
@@ -14,7 +14,7 @@
   background-color: #fff;
   text-align: center;
   font-weight: 300;
-  background-color: #BDECEC;
+  /*background-color: #BDECEC;*/
 
 }
 
@@ -32,10 +32,9 @@
   -webkit-transform:translate3d(0,0,0);
   background-image:url('../img/DocApprove/background.png');
 }
-
+/*
 .tabbed-slidebox .tsb-icons a {
   display: inline-block;
-  /*width: 54px;*/
   font-size: 24px;
   color: #FFFFFF;
   -webkit-transform:translate3d(0,8px,0);
@@ -50,7 +49,21 @@
   -webkit-transform:translate3d(0,0,0);
   background-image:url('../img/DocApprove/menu_tab_white.png');
   background-size: cover;
-  width: 150px !important;
+  width: 180px !important;
+}
+*/
+.tabbed-slidebox .tsb-icons a {
+  display: inline-block;
+  width: 54px;
+  font-size: 2.5em;
+  color: #000;
+  -webkit-transform:translate3d(0,3px,0);
+}
+
+.tabbed-slidebox .tsb-icons a.active {
+  color: #f8f8f8;
+  font-size: 3.5em;
+  -webkit-transform:translate3d(0,0,0);
 }
 
 .tabbed-slidebox .tabbed-slidebox {
@@ -88,11 +101,10 @@
   font-size: 1.5em;
   line-height: 1.5em;
   text-decoration: none;
-  /*margin: 0 15px;*/
-  padding: 0px 5px 8px 5px;
+  margin: 0 15px;
   /*border-bottom: 3px solid transparent;*/
 }
 .tabbed-slidebox .tsb-icons .scroll a.active {
-  font-size: 1.5em;
+  font-size: 1.6em;
   /*border-bottom: 3px solid #ccc;*/
 }
