--- a/www/templates/apps/docApprove/p3_moduleDocList.html
+++ b/www/templates/apps/docApprove/p3_moduleDocList.html
@@ -5,7 +5,7 @@
   <ion-nav-title>
     <div class="bar bar-header bar-light">
       <div class="title" id="logo">
-        <img src="img/DocApprove/logo.png" style="max-width: 100%;  height: 100%;"/>
+        <!--<img src="img/DocApprove/logo.png" style="max-width: 100%;  height: 100%;"/>-->
       </div>
     </div>
   </ion-nav-title>
