--- a/www/templates/apps/docApprove/p4_doc_806.html
+++ b/www/templates/apps/docApprove/p4_doc_806.html
@@ -5,7 +5,7 @@
   <ion-nav-title>
     <div class="bar bar-header bar-light">
       <div class="title" id="logo">
-        <img src="img/DocApprove/logo.png" style="max-width: 100%;  height: 100%;"/>
+        <!--<img src="img/DocApprove/logo.png" style="max-width: 100%;  height: 100%;"/>-->
       </div>
     </div>
   </ion-nav-title>
@@ -133,7 +133,7 @@
       </div>
 
       <div class="col">
-        <button class="button button-block button-large button-assertive icon-right ion-document-text" ng-click="NotePopup()">הערה</button>
+        <button class="button button-block button-large button-balanced icon-right ion-document-text" ng-click="NotePopup()">הערה</button>
       </div>
     </div>
 
